--- a/custom_components/power_monitor/config.yaml
+++ b/custom_components/power_monitor/config.yaml
@@ -1,1 +1,14 @@
-
+name: "Power-Monitor"
+description: "My first real add-on!"
+version: "0.1.0"
+slug: "power_monitor"
+init: false
+arch:
+  - aarch64
+  - amd64
+  - armhf
+  - armv7
+  - i386
+startup: services
+ports:
+  8000/tcp: 8000
